--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.4",
     "immer": "^1.9.3",
     "nodemon": "^1.18.9",
+    "open-color": "^1.6.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
