--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "immer": "^1.9.3",
+    "mysql": "^2.16.0",
     "nodemon": "^1.18.9",
     "open-color": "^1.6.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
